sorted out some alignment issues on the articles page

--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -16,8 +16,6 @@
     box-shadow: rgba(46, 237, 240, 0.4) -5px 5px, rgba(46, 237, 240, 0.3) -10px 10px, rgba(46, 227, 240, 0.2) -15px 15px, rgba(46, 240, 233, 0.1) -20px 20px, rgba(46, 217, 240, 0.05) -25px 25px;
     padding: 20px;
     height: 100%;
-
-    
 }
 
 /* Content */
@@ -25,27 +23,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: auto;
-   
+ 
 }
 
 .articleTitle {
-    display: inline-block;
+  
     font-family: "commodore";
-    font-size: 1.5vw;
+    font-size: 2.5vw;
     text-align: center;
   
 }
 
-
-
 .articleDescription {
     display: inline-block;
     font-family: courier;
-    font-size: 1.3vw;
+    font-size: 2vw;
     text-align: justify;
     overflow: scroll;
-    text-overflow: none;
+ 
    
 }
 
@@ -59,10 +54,7 @@
     
 }
 
-.links {
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 20px;
-    margin-left: 20px;
+.articleLink {
+ 
     text-decoration: none;
 }
